--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,6 +3,33 @@
     "value": "русский",
     "name": "Язык"
   },
+  "authorizationPage": {
+    "title": "Добро пожаловать в Bank App",
+    "description": "Это система интернет-банкинга, которая обеспечивает удаленный доступ к вашим счетам и дает возможность осуществлять операции через интернет в любое время с любого компьютера или портативного устройства."
+  },
+  "loginPage": {
+    "description": {
+      "singUp": "Уже есть аккаунт?"
+    },
+    "links": {
+      "singUp": "Или создать учетную запись.",
+      "singIn": "Войти."
+    },
+    "privacyPolicy": "Да, я понимаю и принимаю Условия использования банковских приложений, включая Пользовательское соглашение и Политику конфиденциальности."
+  },
+  "inputs": {
+    "labels": {
+      "firstName": "Имя",
+      "lastName": "Фамилия",
+      "email": "Адрес электронной почты",
+      "password": "Пароль",
+      "confirmPassword": "Подтвердите пароль"
+    }
+  },
+  "buttons": {
+    "singIn": "Войти",
+    "singUp": "Создать аккаунт"
+  },
   "nav": {
     "links": {
       "overview": "Главная",
