--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,11 +9,11 @@
   },
   "loginPage": {
     "description": {
-      "singUp": "Уже есть аккаунт?"
+      "signUp": "Уже есть аккаунт?"
     },
     "links": {
-      "singUp": "Или создать учетную запись.",
-      "singIn": "Войти."
+      "signUp": "Или создать учетную запись.",
+      "signIn": "Войти."
     },
     "privacyPolicy": "Да, я понимаю и принимаю Условия использования банковских приложений, включая Пользовательское соглашение и Политику конфиденциальности."
   },
@@ -27,8 +27,8 @@
     }
   },
   "buttons": {
-    "singIn": "Войти",
-    "singUp": "Создать аккаунт"
+    "signIn": "Войти",
+    "signUp": "Создать аккаунт"
   },
   "nav": {
     "links": {
