--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,6 +24,27 @@
       "email": "Адрес электронной почты",
       "password": "Пароль",
       "confirmPassword": "Подтвердите пароль"
+    },
+    "errors": {
+      "firstName": {
+        "required": "Обязательное поле",
+        "minLength": "Введите 2 и более символов",
+        "maxLength": "Введите не более 20 символов"
+      },
+      "lastName": {
+        "required": "Обязательное поле",
+        "minLength": "Введите 2 и более символов",
+        "maxLength": "Введите не более 20 символов"
+      },
+      "email":{
+        "required": "Обязательное поле",
+        "isEmail": "Не корректный адрес"
+      },
+      "password": {
+        "required": "Обязательное поле",
+        "minLength": "Введите 5 и более символов",
+        "confirmPassword": "Пароли не совпадают"
+      }
     }
   },
   "buttons": {
