--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -49,7 +49,8 @@
   },
   "buttons": {
     "signIn": "Sign in",
-    "signUp": "Create account"
+    "signUp": "Create account",
+    "logOut": "Log out"
   },
   "nav": {
     "links": {
