--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -49,7 +49,8 @@
   },
   "buttons": {
     "signIn": "Войти",
-    "signUp": "Создать аккаунт"
+    "signUp": "Создать аккаунт",
+    "logOut": "Выйти"
   },
   "nav": {
     "links": {
