--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -36,7 +36,7 @@
         "minLength": "Введите 2 и более символов",
         "maxLength": "Введите не более 20 символов"
       },
-      "email":{
+      "email": {
         "required": "Обязательное поле",
         "isEmail": "Не корректный адрес"
       },
@@ -50,7 +50,9 @@
   "buttons": {
     "signIn": "Войти",
     "signUp": "Создать аккаунт",
-    "logOut": "Выйти"
+    "logOut": "Выйти",
+    "addNewCard": "Добавить карту",
+    "createCard": "Создать карту"
   },
   "nav": {
     "links": {
