remove mistakes after codereview

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,6 +17,9 @@
     },
     "privacyPolicy": "Да, я понимаю и принимаю Условия использования банковских приложений, включая Пользовательское соглашение и Политику конфиденциальности."
   },
+  "cards": {
+    "noCards": "У Вас нет карт, нажмите кнопку «Добавить карту» чтобы добавить."
+  },
   "inputs": {
     "labels": {
       "firstName": "Имя",
