--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,6 +17,9 @@
     },
     "privacyPolicy": "Yes, I understand and agree to Bank Apps Terms of Service, including the User Agreement and Privacy Policy."
   },
+  "cards": {
+    "noCards": "You don't have cards, press button «Add card» to add."
+  },
   "inputs": {
     "labels": {
       "firstName": "First Name",
