--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -20,6 +20,9 @@
   "cards": {
     "noCards": "У Вас нет карт, нажмите кнопку «Добавить карту» чтобы добавить."
   },
+  "recipients": {
+    "title": "Быстрый перевод"
+  },
   "inputs": {
     "labels": {
       "firstName": "Имя",
