--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,7 +21,8 @@
     "noCards": "У Вас нет карт, нажмите кнопку «Добавить карту» чтобы добавить."
   },
   "recipients": {
-    "title": "Быстрый перевод"
+    "title": "Быстрый перевод",
+    "manualTransaction": "Перевод"
   },
   "inputs": {
     "labels": {
