--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -61,6 +61,14 @@
         "required": "Обязательное поле",
         "minLength": "Введите 5 и более символов",
         "confirmPassword": "Пароли не совпадают"
+      },
+      "price": {
+        "required": "Обязательное поле",
+        "invalid": "Значение не корректно"
+      },
+      "card" : {
+        "required": "Обязательное поле",
+        "invalid": "Не верный номер"
       }
     }
   },
