--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -32,7 +32,12 @@
     "price": "Сумма",
     "pricePlaceholder": "Введите сумму",
     "commentPlaceholder": "Введите коментарий",
-    "comment": "Комментарий"
+    "comment": "Комментарий",
+    "errors": {
+      "404": "Карта получателя введена некорректно или такой карты не существует.",
+      "402": "Недостаточно средств на счету.",
+      "internet": "Проблемы с вашим интернет соединением."
+    }
   },
   "inputs": {
     "labels": {
