--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -34,8 +34,8 @@
     "commentPlaceholder": "Введите коментарий",
     "comment": "Комментарий",
     "errors": {
-      "404": "Карта получателя введена некорректно или такой карты не существует.",
-      "402": "Недостаточно средств на счету.",
+      "404": "Карта получателя введена некорректно или карты не существует.",
+      "402": "Недостаточно средств на счету. Попробуйте выбрать другую карту.",
       "internet": "Проблемы с вашим интернет соединением."
     }
   },
