fixes after coderewiev

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -94,5 +94,8 @@
       "account": "Акаунт",
       "settings": "Настройки"
     }
+  },
+  "errors": {
+    "internet": "Problems with your internet connection."
   }
 }
